<?xml version="1.0" encoding="utf-8"?>
<!-- Непряхин Д.-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/parentView_style"
    tools:context="nepryahin_daniil.kcal.MainActivity">
     <!-- Активность с которой стартует приложение
          Сдесь находится навигация по приложению-->
    <Button
        style="@style/MainBtnStyle"
        android:id="@+id/btnCalculateKcal"
        android:layout_marginTop="@dimen/main_btn_top_margin"
        android:text="@string/btnCalculateKcal_text"
        android:onClick="onClick_CalculateKcal"/>
    <Button
        style="@style/MainBtnStyle"
        android:id="@+id/btnHowTo"
        android:layout_below="@+id/btnCalculateKcal"
        android:text="@string/btnHowTo_text"
        android:onClick="onClick_HowTo"/>
    <Button
        style="@style/MainBtnStyle"
        android:id="@+id/btnAbout"
        android:layout_below="@+id/btnHowTo"
        android:text="@string/btnAbout_text"
        android:onClick="onClick_About"/>
    <Button
        style="@style/MainBtnStyle"
        android:id="@+id/btnSendMessage"
        android:layout_below="@+id/btnAbout"
        android:text="@string/btnSendMessage_text"
        android:onClick="onClick_SendMessage"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgvLogo"
        android:src="@drawable/logo"
        android:layout_below="@+id/btnSendMessage"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
